# SAI-Implementation

./: README.md  configure.ac  release notes.txt
debian/: changelog  control
inc/: sai_windows.h
inc/sai/: saivlan.h
mlnx_sai/: .gitignore  Makefile.am  configure.ac  mlnx_sai.vcxproj  mlnx_sai.vcxproj.filters  sai_interface.ver
mlnx_sai/debian/: changelog  rules
mlnx_sai/inc/: flextrum_types.h  fx_base_api.h  fx_base_bitmap.h  fx_base_range_match.h  mlnx_flex_bitmap.h  mlnx_flex_types.h  mlnx_sai.h  mlnx_sai_prm_api.h  mlnx_sai_swid_api.h  sai_windows.h  sharedlib.h
mlnx_sai/inc/experimental/: saiextensions.h  saiswitchextensions.h  saitypesextensions.h
mlnx_sai/inc/sai/: sai.h  saiacl.h  saibuffer.h  saihostintf.h  sailag.h  sainexthop.h  saiport.h  saiqueue.h  sairouter.h  sairouterintf.h  saiswitch.h  saitypes.h  saivlan.h
mlnx_sai/inc/sdk/: sx_api_bmtor.h  sx_bmtor.h
mlnx_sai/mlnx_obj_sai/etc/: sai.pc
mlnx_sai/mlnx_obj_sai/src/.deps/: libfx_base_la-fx_base_acl_validation.Plo  libfx_base_la-fx_base_action_init.Plo  libfx_base_la-fx_base_api.Plo  libfx_base_la-fx_base_range_match.Plo  libfx_base_la-fx_base_user_init.Plo  libfx_base_la-fx_parser.Plo  mlnx_sai_acl.Plo  mlnx_sai_bfd.Plo  mlnx_sai_bridge.Plo  mlnx_sai_buffer.Plo  mlnx_sai_counter.Plo  mlnx_sai_debug_counter.Plo  mlnx_sai_fdb.Plo  mlnx_sai_hash.Plo  mlnx_sai_host_interface.Plo  mlnx_sai_interfacequery.Plo  mlnx_sai_interfacequery_eth.Plo  mlnx_sai_interfacequery_ib.Plo  mlnx_sai_isolation_group.Plo  mlnx_sai_issu_storage.Plo  mlnx_sai_l2mcgroup.Plo  mlnx_sai_lag.Plo  mlnx_sai_mirror.Plo  mlnx_sai_neighbor.Plo  mlnx_sai_nexthop.Plo  mlnx_sai_nexthopgroup.Plo  mlnx_sai_object.Plo  mlnx_sai_object_eth.Plo  mlnx_sai_object_ib.Plo  mlnx_sai_policer.Plo  mlnx_sai_port.Plo  mlnx_sai_port_ib.Plo  mlnx_sai_prm_api.Plo  mlnx_sai_qosmaps.Plo  mlnx_sai_queue.Plo  mlnx_sai_rif.Plo  mlnx_sai_route.Plo  mlnx_sai_router.Plo  mlnx_sai_samplepacket.Plo  mlnx_sai_scheduler.Plo  (+13 more)
mlnx_sai/mlnx_obj_sai/src/.libs/: libsai.lai  libsx_fx_sdk.lai
mlnx_sai/mlnx_obj_sai/src/dbgdump/.deps/: mlnx_sai_dbg_acl.Plo  mlnx_sai_dbg_adaptive_routing.Plo  mlnx_sai_dbg_bfd.Plo  mlnx_sai_dbg_bridge.Plo  mlnx_sai_dbg_buffer.Plo  mlnx_sai_dbg_debug_counter.Plo  mlnx_sai_dbg_gp_reg.Plo  mlnx_sai_dbg_hash.Plo  mlnx_sai_dbg_hostintf.Plo  mlnx_sai_dbg_isolation_group.Plo  mlnx_sai_dbg_mirror.Plo  mlnx_sai_dbg_nhg_nhgm.Plo  mlnx_sai_dbg_policer.Plo  mlnx_sai_dbg_port.Plo  mlnx_sai_dbg_qosmaps.Plo  mlnx_sai_dbg_queue.Plo  mlnx_sai_dbg_samplepacket.Plo  mlnx_sai_dbg_scheduler.Plo  mlnx_sai_dbg_stp.Plo  mlnx_sai_dbg_tunnel.Plo  mlnx_sai_dbg_udf.Plo  mlnx_sai_dbg_utils.Plo  mlnx_sai_dbg_vlan.Plo  mlnx_sai_dbg_wred.Plo
mlnx_sai/mlnx_obj_sai/src/meta/.deps/: saimetadata.Plo  saimetadatautils.Plo  saiserialize.Plo
mlnx_sai/mlnx_obj_sai/src/sdk/.deps/: libsx_fx_sdk_la-sx_api_bmtor.Plo
mlnx_sai/scripts/: sai_prepare.sh  saibpf.bt  server_prepare.sh
mlnx_sai/src/: Makefile.am  ar_config_example.xml  fx_base_acl_validation.c  fx_base_action_init.c  fx_base_api.c  fx_base_range_match.c  fx_parser.c  mlnx_sai_acl.c  mlnx_sai_bfd.c  mlnx_sai_bmtor.c  mlnx_sai_bridge.c  mlnx_sai_buffer.c  mlnx_sai_counter.c  mlnx_sai_dbg_hostintf.c  mlnx_sai_dbg_policer.c  mlnx_sai_dbg_port.c  mlnx_sai_dbg_samplepacket.c  mlnx_sai_dbg_stp.c  mlnx_sai_dbg_tunnel.c  mlnx_sai_debug_counter.c  mlnx_sai_fdb.c  mlnx_sai_hash.c  mlnx_sai_host_interface.c  mlnx_sai_interfacequery.c  mlnx_sai_interfacequery_eth.c  mlnx_sai_interfacequery_ib.c  mlnx_sai_isolation_group.c  mlnx_sai_issu_storage.c  mlnx_sai_l2mcgroup.c  mlnx_sai_lag.c  mlnx_sai_mirror.c  mlnx_sai_neighbor.c  mlnx_sai_nexthop.c  mlnx_sai_nexthopgroup.c  mlnx_sai_object.c  mlnx_sai_object_eth.c  mlnx_sai_object_ib.c  mlnx_sai_policer.c  mlnx_sai_port.c  mlnx_sai_port_ib.c  (+61 more)
mlnx_sai/src/dbgdump/: mlnx_sai_dbg.h  mlnx_sai_dbg_acl.c  mlnx_sai_dbg_adaptive_routing.c  mlnx_sai_dbg_bfd.c  mlnx_sai_dbg_bridge.c  mlnx_sai_dbg_buffer.c  mlnx_sai_dbg_debug_counter.c  mlnx_sai_dbg_hash.c  mlnx_sai_dbg_hostintf.c  mlnx_sai_dbg_isolation_group.c  mlnx_sai_dbg_mirror.c  mlnx_sai_dbg_nhg_nhgm.c  mlnx_sai_dbg_policer.c  mlnx_sai_dbg_port.c  mlnx_sai_dbg_qosmaps.c  mlnx_sai_dbg_queue.c  mlnx_sai_dbg_samplepacket.c  mlnx_sai_dbg_scheduler.c  mlnx_sai_dbg_stp.c  mlnx_sai_dbg_tunnel.c  mlnx_sai_dbg_udf.c  mlnx_sai_dbg_utils.c  mlnx_sai_dbg_vlan.c  mlnx_sai_dbg_wred.c
mlnx_sai/src/meta/: Doxyfile  Doxyfile.compat  acronyms.txt  aspell.en.pws  checkenumlock.sh  checkheaders.pl  parse.pl  saimetadata.c  saimetadata.h  saimetadatatypes.h  saisanitycheck.c  saiserialize.c  saiswig.i
mlnx_sai/src/sdk/: sx_api_bmtor.c
sdk/: README.md  applibs-dev_1.mlnx.4.2.2100_amd64.deb  applibs-dev_1.mlnx.4.2.3002_amd64.deb  applibs-dev_1.mlnx.4.2.3102_amd64.deb  applibs-dev_1.mlnx.4.2.3130_amd64.deb  applibs-dev_1.mlnx.4.2.5008_amd64.deb  applibs-dev_1.mlnx.4.2.5010_amd64.deb  applibs-dev_1.mlnx.4.2.6011_amd64.deb  applibs-dev_1.mlnx.4.2.6106_amd64.deb  applibs-dev_1.mlnx.4.2.7000X027_amd64.deb  applibs-dev_1.mlnx.4.2.7004X004_amd64.deb  applibs-dev_1.mlnx.4.2.7101_amd64.deb  applibs-dev_1.mlnx.4.2.7201_amd64.deb  applibs-dev_1.mlnx.4.2.7303_amd64.deb  applibs-dev_1.mlnx.4.2.7304_amd64.deb  applibs-dev_1.mlnx.4.2.8002_amd64.deb  applibs-dev_1.mlnx.4.2.8103_amd64.deb  applibs-dev_1.mlnx.4.2.8200_amd64.deb  applibs-dev_1.mlnx.4.2.8300_amd64.deb  applibs-dev_1.mlnx.4.2.9102_amd64.deb  applibs-dev_1.mlnx.4.2.9108_amd64.deb  applibs-dev_1.mlnx.4.2.9109_amd64.deb  applibs-dev_1.mlnx.4.2.9306_amd64.deb  applibs-dev_1.mlnx.4.3.0130_amd64.deb  applibs-dev_1.mlnx.4.3.0132_amd64.deb  applibs-dev_1.mlnx.4.3.0134_amd64.deb  applibs-dev_1.mlnx.4.3.0136_amd64.deb  applibs-dev_1.mlnx.4.3.1104_amd64.deb  applibs-dev_1.mlnx.4.3.1420_amd64.deb  applibs-dev_1.mlnx.4.3.1634_amd64.deb  (+698 more)
src/: Makefile.am  mlnx_sai_acl.c  mlnx_sai_buffer.c  mlnx_sai_host_interface.c  mlnx_sai_mirror.c  mlnx_sai_policer.c  mlnx_sai_port.c  mlnx_sai_qosmaps.c  mlnx_sai_queue.c  mlnx_sai_rif.c  mlnx_sai_scheduler.c  mlnx_sai_scheduler_group.c  mlnx_sai_switch.c  mlnx_sai_utils.c
(+89 files in other folders)
